clusters/calops/namespaces/kafka-saas/ingresses/ing-coach.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/client-body-buffer-size: 4096k
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","kubernetes.io/tls-acme":"true"},"name":"coach","namespace":"kafka-saas"},"spec":{"rules":[{"host":"field.a.darkcubed.net","http":{"paths":[{"backend":{"serviceName":"coach-handler","servicePort":8080},"path":"/"}]}},{"host":"infield.a.darkcubed.net","http":{"paths":[{"backend":{"serviceName":"coach-handler","servicePort":8080},"path":"/"}]}}],"tls":[{"hosts":["field.a.darkc [...]
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  creationTimestamp: 2019-08-16T23:20:59Z
  generation: 1
  name: coach
  namespace: kafka-saas
  resourceVersion: "76931059"
  selfLink: /apis/extensions/v1beta1/namespaces/kafka-saas/ingresses/coach
  uid: 81ae3b5d-c07c-11e9-984d-02b425e82e0e
spec:
  rules:
  - host: field.a.darkcubed.net
    http:
      paths:
      - backend:
          serviceName: coach-handler
          servicePort: 8080
        path: /
  - host: infield.a.darkcubed.net
    http:
      paths:
      - backend:
          serviceName: coach-handler
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - field.a.darkcubed.net
    - infield.a.darkcubed.net
    secretName: coach-ingress-tls
status:
  loadBalancer:
    ingress:
    - hostname: a825796a6fb9e11e7aac90666e638446-984127796.us-east-2.elb.amazonaws.com
