clusters/calops/namespaces/kafka-saas/ingresses/ing-scoreboard-beta.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/rewrite-target: /
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"certmanager.k8s.io/cluster-issuer":"letsencrypt","ingress.kubernetes.io/rewrite-target":"/","kubernetes.io/ingress.class":"nginx","kubernetes.io/tls-acme":"true"},"name":"scoreboard-beta","namespace":"kafka-saas"},"spec":{"rules":[{"host":"beta.darkcubed.com","http":{"paths":[{"backend":{"serviceName":"scoreboard-beta","servicePort":8080},"path":"/"}]}}],"tls":[{"hosts":["beta.darkcubed.com"],"secretName":"scor [...]
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  creationTimestamp: 2019-11-20T22:20:34Z
  generation: 1
  name: scoreboard-beta
  namespace: kafka-saas
  resourceVersion: "76388423"
  selfLink: /apis/extensions/v1beta1/namespaces/kafka-saas/ingresses/scoreboard-beta
  uid: f8a5aea0-0be3-11ea-b7e4-02c6bb02f104
spec:
  rules:
  - host: beta.darkcubed.com
    http:
      paths:
      - backend:
          serviceName: scoreboard-beta
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - beta.darkcubed.com
    secretName: scoreboard-beta-app-ingress-tls
status:
  loadBalancer:
    ingress:
    - hostname: a825796a6fb9e11e7aac90666e638446-984127796.us-east-2.elb.amazonaws.com
