clusters/calops/namespaces/kafka-saas/ingresses/ing-scoreboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/rewrite-target: /
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/rewrite-target":"/","kubernetes.io/ingress.class":"nginx","kubernetes.io/tls-acme":"true"},"name":"scoreboard","namespace":"kafka-saas"},"spec":{"rules":[{"host":"app.darkcubed.com","http":{"paths":[{"backend":{"serviceName":"scoreboard","servicePort":80},"path":"/"}]}},{"host":"app.darkcubed.net","http":{"paths":[{"backend":{"serviceName":"scoreboard","servicePort":80},"path":"/"}]}},{"ho [...]
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  creationTimestamp: 2019-08-17T15:59:29Z
  generation: 1
  name: scoreboard
  namespace: kafka-saas
  resourceVersion: "76930597"
  selfLink: /apis/extensions/v1beta1/namespaces/kafka-saas/ingresses/scoreboard
  uid: fead0429-c107-11e9-a064-067d46b7253a
spec:
  rules:
  - host: app.darkcubed.com
    http:
      paths:
      - backend:
          serviceName: scoreboard
          servicePort: 80
        path: /
  - host: app.darkcubed.net
    http:
      paths:
      - backend:
          serviceName: scoreboard
          servicePort: 80
        path: /
  - host: app.darkcubed.io
    http:
      paths:
      - backend:
          serviceName: scoreboard
          servicePort: 80
        path: /
  - host: soldier.a.darkcubed.net
    http:
      paths:
      - backend:
          serviceName: scoreboard
          servicePort: 80
        path: /
  tls:
  - hosts:
    - app.darkcubed.com
    - app.darkcubed.net
    - app.darkcubed.io
    - soldier.a.darkcubed.net
    secretName: scoreboard-app-ingress-tls
status:
  loadBalancer:
    ingress:
    - hostname: a825796a6fb9e11e7aac90666e638446-984127796.us-east-2.elb.amazonaws.com
